# React-Django_starter

./: README.md  pyproject.toml
