[tool.poetry]
name = "django-vite-starter"
version = "0.1.0"
description = ""
authors = ["Michael Holmes <michael.holmesucas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.6"
django = "^4.2.4"
requests = "^2.31.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
